HelloUltraviolet/Fixtures/RejectedSource/Keys/SpeculativeFence/Expected.uv
//! Expected diagnostic metadata for the SpeculativeFence rejected-source specimen.

expectedDiagnostic("E-CON-0096", "rule.19.K-Spec-No-Memory-Ordering")
